<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Rio World Cup Quiz</string>
    <string name="app_title">Rio World Cup\nQuiz</string>    
    <string name="play_button">Play</string>
    <string name="scoreboard_button">Scoreboard</string>
	<string name="instructions_button">Instructions</string>
    <string name="dont_click_button">Don\'t Click Me!</string>
    <string name="mute_button">Mute</string>
	<string name="unmute_button">Unmute</string>
	<string name="exit">Exit</string>
	
	<string name="back">Back to Menu</string>
	<string name="game_title">Let\'s play!</string>
	<string name="scoreboard_title">Scoreboard</string>
	<string name="instructions_title">Quick How-to</string>
	<string name="rate_me_title">I new you would click me!</string>
	
	<string name="app_icon">Rio</string>
	<string name="pause_button">Pause</string>
    <string name="timerVal">00</string>	
	
	<string name="yellow_card_button">Yellow Card</string>
	<string name="red_card_button">Red Card</string>
	<string name="ask_expert_button">Ask Expert</string>
	<string name="ask_fans_button">Ask Football Fans</string>
	
	<string name="pause_popup">Pause</string>
	<string name="pause_popup_resume">Resume</string>
	<string name="pause_popup_restart">Restart</string>
	<string name="pause_popup_exit">Exit</string>
		
</resources>
